package com.nhlstenden.jabberpoint;

public interface Observer
{
    void update(Presentation presentation, Slide data);
}
